# safewalk

./: Cargo.toml  deploy.sh
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/osm/: route.ts
frontend/components/: map.tsx
src/: button.rs  espeak.rs  gps.rs  hazard_analyzer.rs  main.rs  motor.rs  overpass.rs  safewalk.rs
src/networking/: mod.rs  server.rs
