[package]
name = "safewalk"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
rppal = "0.22.1"
log = "0.4.28"
